--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izod/react",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.0",
   "type": "module",
   "sideEffects": false,
   "files": [
@@ -44,5 +44,14 @@
     "zod": "3.21.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/drenther/izod.git"
+  },
+  "homepage": "https://github.com/drenther/izod",
+  "author": {
+    "name": "Soumyajit Pathak"
+  },
+  "license": "MIT"
 }
