--- a/playground/playground-common/package.json
+++ b/playground/playground-common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izod/playground-common",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.0",
   "type": "module",
   "sideEffects": false,
   "files": [
