--- a/playground/playground-react/package.json
+++ b/playground/playground-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izod/playground-react",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite --port 3010",
