--- a/playground/playground-vanilla/package.json
+++ b/playground/playground-vanilla/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@izod/playground-vanilla",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
   "type": "module",
   "scripts": {
