--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izod/react",
   "private": false,
-  "version": "0.2.0",
+  "version": "0.3.0",
   "type": "module",
   "sideEffects": false,
   "files": [
@@ -53,5 +53,11 @@
   "author": {
     "name": "Soumyajit Pathak"
   },
+  "keywords": [
+    "react",
+    "iframe",
+    "typescript",
+    "zod"
+  ],
   "license": "MIT"
 }
