--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izod/react",
   "private": false,
-  "version": "0.7.1",
+  "version": "1.0.0",
   "type": "module",
   "sideEffects": false,
   "files": [
@@ -26,7 +26,8 @@
   },
   "peerDependencies": {
     "zod": "^2.0.0 || ^3.0.0",
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
+    "@izod/core": "1.0.0"
   },
   "devDependencies": {
     "@izod/core": "workspace:*",
