--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@izod/react",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "sideEffects": false,
   "files": [
@@ -22,12 +22,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-use": "17.4.0"
+    "react-use": "17.6.0"
   },
   "peerDependencies": {
     "zod": "^2.0.0 || ^3.0.0",
-    "react": "^16.8.0  || ^17.0.0 || ^18.0.0",
-    "@izod/core": "1.0.0"
+    "react": "^16.8.0  || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "@izod/core": "1.1.0"
   },
   "devDependencies": {
     "@izod/core": "workspace:*",
@@ -39,10 +39,10 @@
     "eslint": "8.45.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
-    "typescript": "5.0.2",
+    "typescript": "5.8.2",
     "vite": "4.4.5",
     "vite-plugin-dts": "3.5.1",
-    "zod": "3.21.4",
+    "zod": "3.24.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
